Bonus_Exercises/Ingress_K8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ita-deployment
  labels:
    app: italia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: italia
  template:
    metadata:
      labels:
        app: italia
    spec:
      containers:
      - name: italia-deploy
        image: italia:1.1
        ports:
        - containerPort: 5000
      
---
apiVersion: v1
kind: Service
metadata:
  name: ita-service
spec:
  selector:
    app: italia
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
