Bonus_Exercises/Ingress_K8s/deploy_eng.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eng-deployment
  labels:
    app: uk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uk
  template:
    metadata:
      labels:
        app: uk
    spec:
      containers:
      - name: uk-deploy
        image: inglese:1.1
        ports:
        - containerPort: 5000
      
---
apiVersion: v1
kind: Service
metadata:
  name: eng-service
spec:
  selector:
    app: uk
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
