Bonus_Exercises/Ingress_K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-formazionesou
spec:
  ingressClassName: nginx
  rules:
  - host: "demo.local"
    http:
      paths:
      - pathType: Prefix
        path: "/eng"
        backend:
          service:
            name: eng-service
            port:
              number: 80
  - host: "demo.local"
    http:
      paths:
      - pathType: Prefix
        path: "/ita"
        backend:
          service:
            name: ita-service
            port:
              number: 80
